--- a/ex/todolist.html
+++ b/ex/todolist.html
@@ -25,9 +25,9 @@
         <button id="doingList" class="submit-btn">doing</button>
         <button id="doneList" class="submit-btn">done</button>
         <button id="allTask" class="submit-btn">All tasks</button>
-        <!-- <button id="deleteAllTasks" class="deleteAllTasks submit-btn"> -->
-        <!-- delete All
-        </button> -->
+        <button id="deleteAllTasks" class="deleteAllTasks submit-btn">
+          delete All
+        </button>
       </div>
 
       <ul id="task-list" class="task-list"></ul>
